fix layout issues, add wrapper incase there is no max width

--- a/css/scenarios.module.css
+++ b/css/scenarios.module.css
@@ -1,10 +1,16 @@
-.path-scenarios body {
+body.path-scenarios  {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: normal;
+ background: #fff;
 }
 
 .path-scenarios .inner-wrap nav, .path-scenarios footer, .bottom-bar {
 	display: none;
+}
+
+.path-scenarios .scenarios-wrapper {
+	max-width:1200px;
+	margin: 0 auto;
 }
 
 .path-scenarios .button a {
@@ -17,21 +23,17 @@
 
 .path-scenarios .scenario_screenshot img {
 	text-align: center;
-	max-width:350px;
+	max-width:100%;
 }
 
 .path-scenarios .scenario {
 	display:inline-block;
 	border: 3px solid #ccc;
 	border-radius: 10px;
-	max-width: 400px;
+	max-width: 350px;
 	padding: 20px;
 	margin:10px;
 	vertical-align: top;
-}
-
-body.path-scenarios {
-	background: #fff;
 }
 
 .path-scenarios .scenarios-page-title{
